--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,6 @@
 [paths]
-train = "/content/train.spacy"
-dev = "/content/valid.spacy"
+train = "/content/sentiment_analysis/train.spacy"
+dev = "/content/sentiment_analysis/valid.spacy"
 vectors = null
 init_tok2vec = null
 
